<resources>
    <string name="app_name">Football Match Schedule</string>
    <string name="match_detail_title">Match Detail</string>
    <string name="last_match_fragment_title">Last Match</string>
    <string name="next_match_fragment_title">Next Match</string>
    <string name="favorite_match_fragment_title">Favorites</string>
    <string name="favorite_match_empty_info">There is no favorite match</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="versus">vs</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="success_added_favorite_match">Added to favorite match</string>
    <string name="success_removed_favorite_match">Removed from favorite match</string>
</resources>
